tests/fixtures/invalid/pow_float_bytes_bool.py
# Cannot call pow() with Float, Bytes, Bool
x = pow(1.0, b"hello", True)
